--- a/frontend/css/product/product.css
+++ b/frontend/css/product/product.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   display: inline-block;
   text-align: center;
-  color: #fff;
+  color: #2b2828;
   font-size: 16px;
   vertical-align: middle;
   background: #24b9ab;
@@ -29,19 +29,40 @@ table {
 }
 .table-header {
     background-color: #2b2828;
-    color: #24b9ab;
+    color: #fff;
     font-weight: bold;
+    border: solid;
+    border-width: medium;
+    border-color: #2b2828;
 }
 tr:nth-child(even) {
-  background-color: #655a5a;
+  background-color: #756969;
   color: #fff;
 }
 tr:nth-child(odd) {
-  background-color: #9e9e9e;
+  background-color: #8c8787;
   color: #fff;
 }
 
-
+button {
+  min-width: 150px;
+  min-height: 35px;
+  background-color: #2b2828;
+  border: solid;
+  border-radius: 5px;
+  border-width: medium;
+  border-color: #2b2828;
+  color: #24b9ab;
+  font-weight: bold;
+}
+button:hover {
+  color: #2b2828;
+  background-color: #24b9ab;
+  border-color: #2b2828;
+}
+input {
+  text-align: center;
+}
 
 .bold {
   font-weight: bold;
