--- a/frontend/css/product/product.css
+++ b/frontend/css/product/product.css
@@ -47,19 +47,32 @@ tr:nth-child(odd) {
 button {
   min-width: 150px;
   min-height: 35px;
-  background-color: #2b2828;
+  font-weight: bold;
+  color: #2b2828;
   border: solid;
   border-radius: 5px;
   border-width: medium;
-  border-color: #2b2828;
-  color: #24b9ab;
-  font-weight: bold;
-}
-button:hover {
-  color: #2b2828;
   background-color: #24b9ab;
   border-color: #2b2828;
+  cursor: pointer;
 }
+button:hover {
+}
+.button-new:hover {
+  background-color: #0dd215;
+}
+.button-delete:hover {
+  background-color: #e91e63;
+  color: #fff;
+}
+.button-edit:hover {
+  background-color: #ffeb3b;
+}
+.button-stock:hover {
+  background-color: #2b2828;
+  color: #fff;
+}
+
 input {
   text-align: center;
 }
