--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -1,6 +1,8 @@
 .footer {
+  position: absolute; 
   bottom: 0;
   margin-bottom: 0;
+  margin-left: -8px;
   width: 100%;
   height: 100px;
   background-color: #2b2828;
